[package]
name = "web"
version = "0.1.0"
authors = ["lhw <616761475@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "=2.0"
actix-rt = "=1.0"
serde = {version = "1.0.104",features = ["derive"]}
tokio = "0.2.13"